# CRISPRi_data_analysis

./: LICENSE  README.md  combine_count_files.py  counter.py  example.ipynb  normalize_de.py  preprocess.sh  process_data.sh  pyproject.toml
CRISPRi_data_analysis/: along_gene_guide_enrich.ipynb  counter.py  gene_fitness.py  normalize.py  polar_linear_plots.ipynb  process_data.sh  tutorial.ipynb  volcano_top_ed_plots.ipynb
CRISPRi_data_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
OUT_ALIGN_COUNTS/: all_counts.tsv
test_downstream_data/: Maggieexample_design_locus_log2FC.csv  example_along_gene.csv  example_log2fc_pvalue.csv
