[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CRISPRi_data_analysis"
version = "0.0.1"
authors = [
  { name="Evelyn Faust", email="evfaust@umich.edu" },
]
description = "Unified pipeline for processing, analyzing, and visualizing CRISPRi data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
exclude = ["design"]